--- a/faceR/package.json
+++ b/faceR/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "axios": "^1.2.2",
     "expo": "~47.0.12",
     "expo-image-picker": "^14.0.2",
     "expo-status-bar": "~1.4.2",
@@ -21,4 +22,5 @@
     "@babel/core": "^7.12.9"
   },
   "private": true
+  
 }
